# graspPlugin

./: .gitignore  CMakeLists.txt  README.md
CnoidRos/: CMakeLists.txt  CnoidRosPlugin.cpp
ConstraintIK/: CMakeLists.txt  ConstraintIK.cpp  ConstraintIK.h  ConstraintIKBar.cpp  ConstraintIKBar.h  ConstraintIKPlugin.cpp  ObstacleShape.cpp  ObstacleShape.h  exportdef.h
GeometryHandler/: AssemblyPlan.cpp  AssemblyPlan.h  Boundary.h  CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterParameter.cpp  ClusterParameter.h  EnCalculator.cpp  EnCalculator.h  FindParallelPlane.cpp  FindParallelPlane.h  GeometryAnalysis.cpp  GeometryAnalysis.h  GeometryBar.cpp  GeometryBar.h  GeometryEventEater.cpp  GeometryEventEater.h  GeometryExecutor.cpp  GeometryExecutor.h  GeometryHandle.h  GeometryHandleSceneBody.h  GeometryHandlerPlugin.cpp  GeometryHandlerPluginCustom.cpp  MatchClusters.cpp  MatchClusters.h  OSGGeometrySceneBody.cpp  ObjEnvContact.cpp  ObjEnvContact.h  ObjectShape.cpp  ObjectShape.h  OverlapVolumeCalculator.cpp  OverlapVolumeCalculator.h  SgVisitShapeGet.cpp  SgVisitShapeGet.h  ShapeElements.cpp  ShapeElements.h  ShapeExtractor.cpp  ShapeExtractor.h  csv2stl.cpp  (+4 more)
Grasp/: Arm.cpp  Arm.h  AssemblyObject.cpp  AssemblyObject.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSelectDialog.cpp  CameraSelectDialog.h  ClearanceBoundingVolume.h  ColdetConverter.h  ColdetLinkPair.h  ColdetModelGetter.cpp  ColdetModelGetter.h  ColdetPairData.h  Connection.cpp  Connection.h  ConvexAnalysis.cpp  ConvexAnalysis.h  DrawFunctions.cpp  DrawFunctions.h  DrawUtility.cpp  DrawUtility.h  DrawUtility15.cpp  EventEater.h  ExtCollisionPairInserter.cpp  ExtCollisionPairInserter.h  ExtTriOverlap.cpp  Finger.cpp  Finger.h  ForceClosureTest.cpp  ForceClosureTest.h  GraspBar.cpp  GraspBar.h  GraspBodyItem.h  GraspController.cpp  GraspController.h  GraspEventEater.cpp  GraspEventEater.h  GraspPlugin.cpp  (+65 more)
GraspConsumer/: CMakeLists.txt  GraspConsumer.h  GraspControllerSVC_impl.cpp  GraspRtcBar.cpp  GraspRtcBar.h  GraspRtcController.cpp  GraspRtcController.h  GraspRtcPlugin.cpp
GraspDataGen/: BoxInfo.cpp  BoxInfo.h  CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  GraspDataGenBar.cpp  GraspDataGenBar.h  GraspDataGenPlugin.cpp  GraspDataGenerator.cpp  GraspDataGenerator.h  GraspPatternDialog.cpp  GraspPatternDialog.h  GraspableRegion.cpp  GraspableRegion.h  ParamDialog.cpp  ParamDialog.h  PathSearcher.cpp  PathSearcher.h  PrehensionParamHandler.cpp  PrehensionParamHandler.h  WaistPosSearchDialog.cpp  WaistPosSearchDialog.h  WaistPosSearchMotion.cpp  WaistPosSearchMotion.h  WaistPosSearchResultViewDialog.cpp  WaistPosSearchResultViewDialog.h  WaistPositionSearcher.cpp  WaistPositionSearcher.h  exportdef.h  scaling.py
MotionFile/: CMakeLists.txt  CoordinateTypeConverter.cpp  CoordinateTypeConverter.h  FileIOAndExecutingPart.cpp  FileIOAndExecutingPart.h  LineEditPart.cpp  LineEditPart.h  MainView.cpp  MainView.h  MotionDirectiveEditLine.cpp  MotionDirectiveEditLine.h  MotionDirectiveEditPart.cpp  MotionDirectiveEditPart.h  MotionDirectiveInfo.cpp  MotionDirectiveInfo.h  MotionDirectiveInfoFormatter.cpp  MotionDirectiveInfoFormatter.h  MotionDirectiveInfoWriter.cpp  MotionDirectiveInfoWriter.h  MotionDirectiveTypeConverter.cpp  MotionDirectiveTypeConverter.h  MotionDirectiveValueEditBox.cpp  MotionDirectiveValueEditBox.h  MotionDirectiveValueEditLine.cpp  MotionDirectiveValueEditLine.h  MotionDirectiveWordAnalyzer.cpp  MotionDirectiveWordAnalyzer.h  MotionEdit.cpp  MotionEdit.h  MotionFileBar.cpp  MotionFileBar.h  MotionFileControl.cpp  MotionFileControl.h  MotionFileData.h  MotionFilePlugin.cpp  MotionFileReader.cpp  MotionFileReader.h  MotionUtil.cpp  MotionUtil.h  RobotInMotionEdit.cpp  (+7 more)
ObjectPlacePlanner/: CMakeLists.txt  CollisionPair.cpp  CollisionPair.h  PlaceBar.cpp  PlaceBar.h  PlacePlanPlugin.cpp  PlacePlanner.cpp  PlacePlanner.h  ZmapInterface.cpp  ZmapInterface.h  exportdef.h
PRM/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Configuration.h  ConfigurationSpace.cpp  ConfigurationSpace.h  Mobility.cpp  Mobility.h  PRM.h  ParamDialog.cpp  ParamDialog.h  RRT.cpp  RRT.h  RRTPathPlanner.cpp  RRTPathPlanner.h  RRTRobot.cpp  RRTRobot.h  RRTStar.cpp  RRTStar.h  Roadmap.cpp  Roadmap.h  RoadmapNode.cpp  RoadmapNode.h  TrajectoryBar.cpp  TrajectoryBar.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h  TrajectoryPlugin.cpp  exportdef.h  mpkConfig.h  mpkConfigChecker.cpp  mpkConfigChecker.h  mpkInterface.cpp  mpkInterface.h  mpkPathSmoother.cpp  mpkPathSmoother.h  mpkRobots.cpp  mpkRobots.h  mpkSimpleSegmentChecker.cpp  mpkSimpleSegmentChecker.h  (+23 more)
PickAndPlacePlanner/: AbstractClassifier.cpp  AbstractClassifier.h  CMakeLists.txt  ClassifierFactory.h  DataConv.h  DualArmManipulation.cpp  DualArmManipulation.h  GraspDatabaseManipulator.cpp  GraspDatabaseManipulator.h  IKParallerizer.h  LearningDataManipulator.cpp  LearningDataManipulator.h  LearningDialog.cpp  LearningDialog.h  ManipBar.cpp  ManipBar.h  ManipController.cpp  ManipController.h  ManipFailureAnalyzer.cpp  ManipFailureAnalyzer.h  ManipPlugin.cpp  ObjectPosReader.cpp  ObjectPosReader.h  PenaltyFunction.cpp  PenaltyFunction.h  RandomForestClassifier.cpp  RandomForestClassifier.h  RobotLocalFunctions.cpp  RobotLocalFunctions.h  SVMClassifier.cpp  SVMClassifier.h  SweptVolume.cpp  SweptVolume.h  SweptVolumeDialog.cpp  SweptVolumeDialog.h  classify_param.ini  exportdef.h
PickingTaskPlanner/: CMakeLists.txt  Config.h  ConfirmDialog.cpp  ConfirmDialog.h  JointSeqDivider.cpp  JointSeqDivider.h  PickingTaskPlanner.cpp  PickingTaskPlanner.h  PickingTaskPlannerBar.cpp  PickingTaskPlannerBar.h  PickingTaskPlannerPlugin.cpp  PickingTaskResultDrawer.cpp  PickingTaskResultDrawer.h  ResultDataManipulator.cpp  ResultDataManipulator.h  SceneCapture.h  exportdef.h
RobotInterface/: ArmControllerRtc.cpp  ArmControllerRtc.h  CMakeLists.txt  HistoricMotionState.cpp  HistoricMotionState.h  RobotInterface.cpp  RobotInterface.h  RobotInterfaceBar.cpp  RobotInterfaceBar.h  RobotInterfacePlugin.cpp  exportdef.h
RobotModels/: CMakeLists.txt
RtcGraspPathPlan/: CMakeLists.txt  GraspPathBar.h  (+5 more)
(+903 files in other folders)
